; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_WebUI.c_WuUniMakeTable.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_WebUI.c_WuUniMakeTable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i64*)* @WuUniMakeTable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @WuUniMakeTable(i64* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i32, align 4
  store i64* %0, i64** %3, align 8
  %8 = load i64*, i64** %3, align 8
  %9 = icmp eq i64* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %47

11:                                               ; preds = %1
  %12 = call i32* (...) @NewStrMap()
  store i32* %12, i32** %4, align 8
  br label %13

13:                                               ; preds = %17, %11
  %14 = load i64*, i64** %3, align 8
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %45

17:                                               ; preds = %13
  %18 = call i64 @Malloc(i32 16)
  %19 = inttoptr i64 %18 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %19, %struct.TYPE_3__** %5, align 8
  %20 = load i64*, i64** %3, align 8
  %21 = call i64* @WuUniCopyStrTill(i64* %20, i32 58, i64** %6)
  store i64* %21, i64** %3, align 8
  %22 = load i64*, i64** %6, align 8
  %23 = call i32 @CalcUniToStr(i64* %22)
  store i32 %23, i32* %7, align 4
  %24 = load i32, i32* %7, align 4
  %25 = call i64 @Malloc(i32 %24)
  %26 = inttoptr i64 %25 to i8*
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 0
  store i8* %26, i8** %28, align 8
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  %31 = load i8*, i8** %30, align 8
  %32 = load i32, i32* %7, align 4
  %33 = load i64*, i64** %6, align 8
  %34 = call i32 @UniToStr(i8* %31, i32 %32, i64* %33)
  %35 = load i64*, i64** %3, align 8
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 1
  %38 = bitcast i32* %37 to i64**
  %39 = call i64* @WuUniCopyStrTill(i64* %35, i32 44, i64** %38)
  store i64* %39, i64** %3, align 8
  %40 = load i32*, i32** %4, align 8
  %41 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %42 = call i32 @Add(i32* %40, %struct.TYPE_3__* %41)
  %43 = load i64*, i64** %6, align 8
  %44 = call i32 @Free(i64* %43)
  br label %13

45:                                               ; preds = %13
  %46 = load i32*, i32** %4, align 8
  store i32* %46, i32** %2, align 8
  br label %47

47:                                               ; preds = %45, %10
  %48 = load i32*, i32** %2, align 8
  ret i32* %48
}

declare dso_local i32* @NewStrMap(...) #1

declare dso_local i64 @Malloc(i32) #1

declare dso_local i64* @WuUniCopyStrTill(i64*, i32, i64**) #1

declare dso_local i32 @CalcUniToStr(i64*) #1

declare dso_local i32 @UniToStr(i8*, i32, i64*) #1

declare dso_local i32 @Add(i32*, %struct.TYPE_3__*) #1

declare dso_local i32 @Free(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
